# PersianPKT

./: README.md
persianpkt/: Cargo.toml  README.md
persianpkt/src/: main.rs
persianpkt/src/cli/: args.rs  commands.rs  mod.rs
persianpkt/src/config/: config.rs  mod.rs  paths.rs
persianpkt/src/core/: cache.rs  dependency_resolver.rs  mirror.rs  mod.rs  package_manager.rs  security.rs
persianpkt/src/package/: dependency.rs  manager.rs  mod.rs  package.rs  package_info.rs
persianpkt/src/repository/: mod.rs  repository.rs  source.rs
persianpkt/src/utils/: compression.rs  fs.rs  mod.rs  progress.rs
