[package]
name = "persianpkt"
version = "0.1.0"
edition = "2021"
authors = ["PersianPKT Team"]
description = "A modern package manager for Linux distributions focusing on serving Iranian users"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10"
dirs = "5.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
colored = "2.0"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tempfile = "3.8"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
walkdir = "2.4"
chrono = "0.4"
semver = "1.0"
url = "2.4"
rand = "0.8"
zip = "0.6"
